Реализовал интерфейс UserDAO